tests/NormalTests/paczka1/small_fuzzy/39072819.err
Error in line 2: iPKO S540 11,7
Error in line 7: KHn S935 41,0
Error in line 8: KHn S531 51,1
Error in line 11: KHn S935 0,1
